crates/search/tests/dynamic_search_rules/snapshots/mod.rs/search_pumps_pins_when_organic_results_run_out/limit_10.snap
---
source: crates/indexsearch/tests/dynamic_search_rules/mod.rs
---
[
  {
    "id": "organic-1"
  },
  {
    "id": "organic-2"
  },
  {
    "id": "late-pin-1"
  },
  {
    "id": "late-pin-2"
  }
]
